2008-07-15  Adrian Robert <Adrian.B.Robert@gmail.com>

	* CPP_DEFINES: Add NS port related defines.

2008-06-16  Glenn Morris  <rgm@gnu.org>

	* admin.el (set-version): Add doc/lispref/vol1.texi,vol2.texi,
	doc/lispref/book-spine.texinfo.

2008-06-15  Glenn Morris  <rgm@gnu.org>

	* admin.el (set-version): Add doc/misc/faq.texi.

2008-05-22  Juanma Barranquero  <lekktu@gmail.com>

	* FOR-RELEASE: Remove Windows problem about the XPM image library
	being loaded too soon (fixed by Stefan Monnier on 2008-05-07).

2008-04-15  Juanma Barranquero  <lekktu@gmail.com>

	* unidata/UnicodeData.txt: Update to Unicode 5.1.

2008-04-14  Juanma Barranquero  <lekktu@gmail.com>

	* unidata/unidata-gen.el (unidata-prop-alist):
	Fix typo in description of `numeric-value'.
	(unidata-put-character): Fix typo in error message.

2008-02-21  Glenn Morris  <rgm@gnu.org>

	* notes/unicode, notes/font-backend: New files, split off from
	README.unicode.

2008-02-20  Kenichi Handa  <handa@ni.aist.go.jp>

	* FOR-RELEASE: Remove the problem of ucs-mule-8859-to-mule-unicode
	being used in latin1-disp.el.  Remove the problem of
	cp-supported-codepages.  Remove the problem of lost changelog for
	ps-prin1.ps.

2008-02-16  Eli Zaretskii  <eliz@gnu.org>

	* unidata/makefile.w32-in (unidata.txt): Don't use $<, it's
	non-portable in this context.

	* unidata/Makefile.in (unidata.txt): Don't use $<, it's
	non-portable in this context.

2008-02-09  Eli Zaretskii  <eliz@gnu.org>

	* unidata/makefile.w32-in (lisp): New variable.
	(EMACSLOADPATH): Use $(lisp).  Add lisp/international and
	lisp/emacs-lisp.

2008-02-04  Jason Rumney  <jasonr@gnu.org>

	* unidata/makefile.w32-in (unidata.txt): Use ARGQUOTE and DQUOTE macros.

2008-02-02  Juanma Barranquero  <lekktu@gmail.com>

	* unidata/.cvsignore: Ignore also "Makefile.unix" and "makefile".

2008-02-02  Eli Zaretskii  <eliz@gnu.org>

	* unidata/makefile.w32-in (charprop-CMD): Fix last change.

	* unidata/Makefile.in: Rename from Makefile.
